--- a/MachineCoding/src/index.css
+++ b/MachineCoding/src/index.css
@@ -7,8 +7,15 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-
+h1,h2{
+  margin:0;
+  padding:0
+}
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+* {
+  font-family: "Poppins", sans-serif;
+  box-sizing: border-box;
 }
